--- a/Feature Extraction/3. Feature Extraction with Augmentation copy.ipynb
+++ b/Feature Extraction/3. Feature Extraction with Augmentation copy.ipynb
@@ -428,7 +428,8 @@
    },
    "outputs": [],
    "source": [
-    "predictions = model.predict(test_generator)"
+    "train_features = model.predict(test_generator)\n",
+    "test_features = model.predict(test_generator)"
    ]
   },
   {
