--- a/Feature Selection/6. Recursive Feature Elimination.ipynb
+++ b/Feature Selection/6. Recursive Feature Elimination.ipynb
@@ -87,9 +87,30 @@
     "# applying Information Gain\n",
     "from sklearn.feature_selection import RFE\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "rfe = RFE(RandomForestClassifier(n_estimators=10, random_state=10),\n",
-    "    n_features_to_select=200)\n",
-    "importance = rfe.fit(data, label)"
+    "\n",
+    "est = RandomForestClassifier(n_estimators=10, random_state=10)\n",
+    "rfe = RFE(estimator=est,n_features_to_select=200)\n",
+    "selector = rfe.fit(data, label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1000, 512) (1000,)\n",
+      "(1000, 200) (1000,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.shape, label.shape)\n",
+    "tData = selector.transform(data)\n",
+    "print(tData.shape, label.shape)"
    ]
   },
   {
@@ -177,9 +198,9 @@
     }
    ],
    "source": [
-    "print(rfe.support_)\n",
+    "print(selector.support_)\n",
     "\n",
-    "print(rfe.ranking_)"
+    "print(selector.ranking_)"
    ]
   },
   {
@@ -206,12 +227,12 @@
     "plt.style.use('_mpl-gallery')\n",
     "\n",
     "# make data:\n",
-    "x = 0.5 + np.arange(len(rfe.ranking_))\n",
+    "x = 0.5 + np.arange(len(selector.ranking_))\n",
     "\n",
     "# plot\n",
     "# fig, ax = plt.subplots()\n",
     "\n",
-    "plt.bar(x, rfe.ranking_[:], width=1, edgecolor=\"white\", linewidth=0.7)\n",
+    "plt.bar(x, selector.ranking_[:], width=1, edgecolor=\"white\", linewidth=0.7)\n",
     "\n",
     "# ax.set(xlim=(0, 8), xticks=np.arange(1, 10),\n",
     "#        ylim=(0, 1), yticks=np.arange(1, 10))\n",
